--- a/Wrangle OpenStreetMap Data.ipynb
+++ b/Wrangle OpenStreetMap Data.ipynb
@@ -2,31 +2,447 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# load libraries\n",
+    "from collections import defaultdict\n",
+    "import re\n",
+    "import os\n",
+    "import pprint\n",
+    "import datetime as dt\n",
+    "import csv\n",
+    "import pandas as pd\n",
+    "import xml.etree.cElementTree as cET\n",
+    "\n",
+    "#Load OSM file and path, in this case we are looking at New Orleans, LA, USA\n",
+    "filename = \"new-orleans_louisiana.osm\"\n",
+    "path = \"/Users/matthew/anaconda/envs/udacity_p2/projects/udacity_wrangle_openstreetmap_data/map\"\n",
+    "osmFile = os.path.join(path, filename)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'bounds': 1,\n",
+      " 'member': 68224,\n",
+      " 'nd': 7124566,\n",
+      " 'node': 6413023,\n",
+      " 'osm': 1,\n",
+      " 'relation': 5963,\n",
+      " 'tag': 1664974,\n",
+      " 'way': 378498}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#count the number of unique elements in our file to get a picture of the data structure\n",
+    "def count_tags(osm):\n",
+    "        tags = {}\n",
+    "        for event, elem in cET.iterparse(osm):\n",
+    "            if elem.tag in tags: \n",
+    "                tags[elem.tag] += 1\n",
+    "            else:\n",
+    "                tags[elem.tag] = 1\n",
+    "        return tags\n",
+    "#execute count_tags on our osm file\n",
+    "tags = count_tags(osmFile)\n",
+    "#print the results\n",
+    "pprint.pprint(tags)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "899"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#get the users that have contributed to this OSM file\n",
+    "def get_users(osm):\n",
+    "    users = set()\n",
+    "    for _, element in cET.iterparse(osm):\n",
+    "        for e in element:\n",
+    "            if 'uid' in e.attrib:\n",
+    "                users.add(e.attrib['uid'])\n",
+    "    return users\n",
+    "users = get_users(osmFile)\n",
+    "len(users)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'badchars': 3, 'colon': 690509, 'lower_case': 659110, 'other': 315352}\n"
+     ]
+    }
+   ],
+   "source": [
+    "lower_case = re.compile(r'^([a-z]|_)*$')\n",
+    "colon = re.compile(r'^([a-z]|_)*:([a-z]|_)*$')\n",
+    "badchars = re.compile(r'[=\\+/&<>;\\'\"\\?%#$@\\,\\. \\t\\r\\n]')\n",
+    "\n",
+    "#search tags for three types of elements, ones that value values that are all lowercase and are valid, ones that are valid but have colons, and one that looks for bad or problem characters\n",
+    "def key_type(element, keys):\n",
+    "    if element.tag == \"tag\":\n",
+    "        for tag in element.iter('tag'):\n",
+    "            k = tag.get('k')\n",
+    "            if lower_case.search(k):\n",
+    "                keys['lower_case'] += 1\n",
+    "            elif colon.search(k):\n",
+    "                keys['colon'] += 1\n",
+    "            elif badchars.search(k):\n",
+    "                keys['badchars'] += 1\n",
+    "            else:\n",
+    "                keys['other'] += 1\n",
+    "    return keys\n",
+    "\n",
+    "\n",
+    "def search_keys(osm):\n",
+    "    keys = {\"lower_case\": 0, \"colon\": 0, \"badchars\": 0, \"other\": 0}\n",
+    "    for _, element in cET.iterparse(osm):\n",
+    "        keys = key_type(element, keys)\n",
+    "\n",
+    "    return keys\n",
+    "\n",
+    "keys = search_keys(osmFile)\n",
+    "pprint.pprint(keys)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Banks St => Banks Street\n",
+      "Octavia St => Octavia Street\n",
+      "S Broad St => S Broad Street\n",
+      "Ponce De Leon St => Ponce De Leon Street\n",
+      "Chartres St => Chartres Street\n",
+      "Magazine Street;Magazine St => Magazine Street;Magazine Street\n",
+      "East St => East Street\n",
+      "E Rutland St => E Rutland Street\n",
+      "North St => North Street\n",
+      "Marais St => Marais Street\n",
+      "Laurel St => Laurel Street\n",
+      "N Rendon St => N Rendon Street\n",
+      "Magazine St => Magazine Street\n",
+      "Lasalle St => Lasalle Street\n",
+      "Tchoupitoulas St => Tchoupitoulas Street\n",
+      "South St => South Street\n",
+      "Toulouse St => Toulouse Street\n",
+      "Dauphine St => Dauphine Street\n",
+      "Decatur St => Decatur Street\n",
+      "543 5th St => 543 5th Street\n",
+      "Royal St => Royal Street\n",
+      "Bourbon St => Bourbon Street\n",
+      "Canal St => Canal Street\n",
+      "South St Patrick St => South St Patrick Street\n",
+      "Whitney St => Whitney Street\n",
+      "S Dupre St => S Dupre Street\n",
+      "Prytania St => Prytania Street\n",
+      "Johnny Dufrene St => Johnny Dufrene Street\n",
+      "Bayou Rd => Bayou Road\n",
+      "West I-10 Service Rd => West I-10 Service Road\n",
+      "Cobia Dr => Cobia Drive\n",
+      "Acadia Dr => Acadia Drive\n",
+      "Unity Dr => Unity Drive\n",
+      "Keeneland Dr => Keeneland Drive\n",
+      "Patterson Dr => Patterson Drive\n",
+      "Galleria Blvd => Galleria Boulevard\n",
+      "Citrus Blvd => Citrus Boulevard\n",
+      "S Alex Plaisance Blvd => S Alex Plaisance Boulevard\n",
+      "N Causeway Blvd => N Causeway Boulevard\n",
+      "Shortcut Hwy => Shortcut Highway\n",
+      "Woodland Hwy => Woodland Highway\n",
+      "Jefferson Hwy => Jefferson Highway\n",
+      "Napoleon Ave => Napoleon Avenue\n",
+      "St. Claude Ave => St. Claude Avenue\n",
+      "Rio Vista Ave => Rio Vista Avenue\n",
+      "Hagan Ave => Hagan Avenue\n",
+      "Franklin Ave => Franklin Avenue\n",
+      "Esplanade Ave => Esplanade Avenue\n",
+      "S Carrollton Ave => S Carrollton Avenue\n",
+      "1227 Tulane Ave => 1227 Tulane Avenue\n",
+      "S Claiborne Ave => S Claiborne Avenue\n",
+      "N Carrollton Ave => N Carrollton Avenue\n",
+      "Severn Ave => Severn Avenue\n",
+      "E 21st Ave => E 21st Avenue\n",
+      "Orleans Ave => Orleans Avenue\n",
+      "N Claiborne Ave => N Claiborne Avenue\n",
+      "Elysian Fields Ave => Elysian Fields Avenue\n",
+      "DONE!!\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Clean up street names so they all use the same abbreviation, print out the ones we updated.\n",
+    "street_type_re = re.compile(r'\\b\\S+\\.?$', re.IGNORECASE)\n",
+    "\n",
+    "expected = [\"Avenue\", \"Boulevard\", \"Commons\", \"Court\", \"Drive\", \"Lane\", \"Parkway\", \n",
+    "                         \"Place\", \"Road\", \"Square\", \"Street\", \"Trail\"]\n",
+    "\n",
+    "mapping = {'Ave'  : 'Avenue',\n",
+    "           'Blvd' : 'Boulevard',\n",
+    "           'Dr'   : 'Drive',\n",
+    "           'Ln'   : 'Lane',\n",
+    "           'Pkwy' : 'Parkway',\n",
+    "           'Rd'   : 'Road',\n",
+    "           'Rd.'   : 'Road',\n",
+    "           'St'   : 'Street',\n",
+    "           'street' :\"Street\",\n",
+    "           'Ct'   : \"Court\",\n",
+    "           'Cir'  : \"Circle\",\n",
+    "           'Cr'   : \"Court\",\n",
+    "           'ave'  : 'Avenue',\n",
+    "           'Hwg'  : 'Highway',\n",
+    "           'Hwy'  : 'Highway',\n",
+    "           'Sq'   : \"Square\"}\n",
+    "\n",
+    "def audit_street_type(street_types, street_name):\n",
+    "    m = street_type_re.search(street_name)\n",
+    "    if m:\n",
+    "        street_type = m.group()\n",
+    "        if street_type not in expected:\n",
+    "            street_types[street_type].add(street_name)\n",
+    "\n",
+    "def is_street_name(elem):\n",
+    "    return (elem.attrib['k'] == \"addr:street\")\n",
+    "\n",
+    "def audit(osmfile):\n",
+    "    osm_file = open(osmfile, \"r\")\n",
+    "    street_types = defaultdict(set)\n",
+    "    for event, elem in cET.iterparse(osm_file, events=(\"start\",)):\n",
+    "\n",
+    "        if elem.tag == \"node\" or elem.tag == \"way\":\n",
+    "            for tag in elem.iter(\"tag\"):\n",
+    "                if is_street_name(tag):\n",
+    "                    audit_street_type(street_types, tag.attrib['v'])\n",
+    "\n",
+    "    return street_types\n",
+    "\n",
+    "def update_street_name(name, mapping, regex):\n",
+    "    m = regex.search(name)\n",
+    "    if m:\n",
+    "        street_type = m.group()\n",
+    "        if street_type in mapping:\n",
+    "            name = re.sub(regex, mapping[street_type], name)\n",
+    "\n",
+    "    return name\n",
+    "\n",
+    "streets = audit(osmFile)\n",
+    "\n",
+    "for street_type, ways in streets.iteritems():\n",
+    "    for name in ways:\n",
+    "        updated_name = update_street_name(name, mapping, street_type_re)\n",
+    "        if updated_name != name :\n",
+    "            print name, \"=>\", updated_name\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "63525 => None\n",
+      "39529 => None\n",
+      "39574 => None\n",
+      "39576 => None\n",
+      "39571 => None\n",
+      "39556 => None\n",
+      "39560 => None\n",
+      "39466 => None\n",
+      "39572 => None\n",
+      "39520 => None\n",
+      "39573 => None\n",
+      "39525 => None\n",
+      "39501 => None\n",
+      "39503 => None\n",
+      "LA 70116 => 70116\n",
+      "LA 70117 => 70117\n",
+      "70345 => None\n",
+      "70070 => None\n",
+      "70448 => None\n",
+      "70394 => None\n",
+      "70403 => None\n",
+      "70458 => None\n",
+      "70083 => None\n",
+      "70420 => None\n",
+      "70421 => None\n",
+      "70032 => None\n",
+      "70094 => None\n",
+      "70131 => None\n",
+      "70114 => None\n",
+      "70053 => None\n",
+      "70135 => None\n",
+      "70130-3890 => None\n",
+      "70115 => None\n",
+      "70116 => None\n",
+      "70117 => None\n",
+      "70112 => None\n",
+      "70113 => None\n",
+      "70037 => None\n",
+      "70401 => None\n",
+      "70118 => None\n",
+      "70119 => None\n",
+      "70058 => None\n",
+      "70471 => None\n",
+      "70072 => None\n",
+      "70056 => None\n",
+      "70130 => None\n",
+      "70128 => None\n",
+      "70433 => None\n",
+      "70357 => None\n",
+      "70354 => None\n",
+      "70003 => None\n",
+      "70434 => None\n",
+      "70446 => None\n",
+      "70041 => None\n",
+      "70447 => None\n",
+      "70170 => None\n",
+      "70454 => None\n",
+      "70012 => None\n",
+      "70445 => None\n",
+      "70002 => None\n",
+      "70065 => None\n",
+      "70001 => None\n",
+      "70006 => None\n",
+      "70039 => None\n",
+      "70062 => None\n",
+      "70005 => None\n",
+      "70068 => None\n",
+      "70112-2625 => None\n",
+      "70460 => None\n",
+      "70461 => None\n",
+      "70462 => None\n",
+      "70040 => None\n",
+      "70125 => None\n",
+      "70124 => None\n",
+      "70127 => None\n",
+      "70126 => None\n",
+      "70121 => None\n",
+      "70043 => None\n",
+      "70123 => None\n",
+      "70122 => None\n"
+     ]
+    }
+   ],
+   "source": [
+    "def audit_zipcode(invalid_zipcodes, zipcode):\n",
+    "    twoDigits = zipcode[0:2]\n",
+    "    \n",
+    "    if not twoDigits.isdigit():\n",
+    "        invalid_zipcodes[twoDigits].add(zipcode)\n",
+    "    \n",
+    "    elif twoDigits != 95:\n",
+    "        invalid_zipcodes[twoDigits].add(zipcode)\n",
+    "        \n",
+    "def is_zipcode(elem):\n",
+    "    return (elem.attrib['k'] == \"addr:postcode\")\n",
+    "\n",
+    "def audit_zip(osmfile):\n",
+    "    osm_file = open(osmfile, \"r\")\n",
+    "    invalid_zipcodes = defaultdict(set)\n",
+    "    for event, elem in ET.iterparse(osm_file, events=(\"start\",)):\n",
+    "\n",
+    "        if elem.tag == \"node\" or elem.tag == \"way\":\n",
+    "            for tag in elem.iter(\"tag\"):\n",
+    "                if is_zipcode(tag):\n",
+    "                    audit_zipcode(invalid_zipcodes,tag.attrib['v'])\n",
+    "\n",
+    "    return invalid_zipcodes\n",
+    "\n",
+    "def update_zips(zipcode):\n",
+    "    testNum = re.findall('[a-zA-Z]*', zipcode)\n",
+    "    if testNum:\n",
+    "        testNum = testNum[0]\n",
+    "    testNum.strip()\n",
+    "    if testNum == \"LA\":\n",
+    "        convertedZipcode = (re.findall(r'\\d+', zipcode))\n",
+    "        if convertedZipcode:\n",
+    "            if convertedZipcode.__len__() == 2:\n",
+    "                return (re.findall(r'\\d+', zipcode))[0] + \"-\" +(re.findall(r'\\d+', zipcode))[1]\n",
+    "            else:\n",
+    "                return (re.findall(r'\\d+', zipcode))[0]\n",
+    "\n",
+    "\n",
+    "zipcodes = audit_zip(osmFile)\n",
+    "\n",
+    "for street_type, ways in zipcodes.iteritems():\n",
+    "    for zipcode in ways:\n",
+    "        updated_zipcode = update_zips(zipcode)\n",
+    "        if zipcode != updated_zipcode :\n",
+    "            print zipcode, \"=>\", updated_zipcode"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import xml.etree.cElementTree as "
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
