--- a/Wrangle OpenStreetMap Data.ipynb
+++ b/Wrangle OpenStreetMap Data.ipynb
@@ -19,10 +19,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
+   "outputs": [],
    "source": [
     "# load libraries\n",
     "from collections import defaultdict\n",
@@ -41,18 +43,15 @@
     "\n",
     "#Load OSM file and path, in this case we are looking at New Orleans, LA, USA\n",
     "filename = \"new-orleans_louisiana.osm\"\n",
-    "#path = \"/Users/matthew/anaconda/envs/udacity_p2/projects/udacity_wrangle_openstreetmap_data/map\"\n",
     "path = \"./map\"\n",
     "osmFile = os.path.join(path, filename)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
    "source": [
     "## Review Data\n",
     "\n",
@@ -61,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +105,7 @@
        "899"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -8493,7 +8492,7 @@
        " ...]"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8543,8 +8542,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
-   "metadata": {},
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Connect to MongoDB\n",
@@ -8556,7 +8557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -8573,7 +8574,7 @@
        "0"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8609,8 +8610,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "new_orleans_la_data = db[collection]"
@@ -8625,7 +8628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -8651,7 +8654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -8660,7 +8663,7 @@
        "6791521"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8678,7 +8681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -8687,7 +8690,7 @@
        "885"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8705,7 +8708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -8731,7 +8734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -8761,7 +8764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -8802,7 +8805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -8832,7 +8835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -8871,7 +8874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -8910,7 +8913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
