--- a/Wrangle OpenStreetMap Data.ipynb
+++ b/Wrangle OpenStreetMap Data.ipynb
@@ -8764,7 +8764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -8941,6 +8941,26 @@
     "                      ])\n",
     "for result in gas_stations:\n",
     "    print(result)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-27-f2f8116c81d2>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-27-f2f8116c81d2>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    gas_stations=new_orleans_la_data.aggregate([{\"$match\":{\"address.postcode\":{\"$exists\":1}}}, {\"$group\":{\"_id\":\"$address.postcode\", \"count\":{\"$sum\":1}}}, {\"$sort\":{\"count\":­1}}])\u001b[0m\n\u001b[0m                                                                                                                                                                             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "gas_stations=new_orleans_la_data.aggregate([{\"$match\":{\"address.postcode\":{\"$exists\":1}}}, {\"$group\":{\"_id\":\"$address.postcode\", \"count\":{\"$sum\":1}}}, {\"$sort\":{\"count\":­1}}])\n",
+    "for result in gas_stations:\n",
+    "    print(result)"
    ]
   },
   {
